[gd_scene load_steps=2 format=3 uid="uid://rwk3f1ophxis"]

[ext_resource type="Script" uid="uid://cbtoyq12h6fmy" path="res://scripts/save_card.gd" id="1_q84u1"]

[node name="SaveCard" type="Button"]
custom_minimum_size = Vector2(580, 90)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -290.0
offset_top = -45.0
offset_right = 290.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 4
script = ExtResource("1_q84u1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainerLeft" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SaveNumberLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainerLeft"]
layout_mode = 2
text = "Save X"

[node name="HeroNameLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainerLeft"]
layout_mode = 2
text = "Hero Name"

[node name="ExperienceLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainerLeft"]
layout_mode = 2
text = "Experience: 999"

[node name="LastSaveLabel" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Last Saved: "

[node name="CenterContainer" type="CenterContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="EmptySaveLabel" type="Label" parent="CenterContainer"]
layout_mode = 2
text = "SLOT VAZIO"
